# rusticle

./: Cargo.toml  LICENSE  README.md
examples/: matrix.rs
src/: lib.rs
src/complex/: angle.rs  complex.rs  mod.rs  vector.rs
src/linalg/: matrix.rs  mod.rs
tests/: angle_tests.rs  complex_tests.rs  mod.rs
tests/complex/: mod.rs  vector_tests.rs
tests/linalg/: matrix_tests.rs  mod.rs
