[package]
name = "rusticle"
version = "0.4.11"
edition = "2024"
description = "High-performance Rust library for numerical computing, built with power and simplicity."
authors = ["Soham Ghugare <soham.ghugare@gmail.com>"]
keywords = ["complex-numbers", "math", "rust"]
categories = ["mathematics"]
license = "Apache-2.0"
repository = "https://github.com/SohamGhugare/rusticle"
readme = "README.md"

[dependencies]
